--- a/src/components/Order/styles.module.scss
+++ b/src/components/Order/styles.module.scss
@@ -61,6 +61,7 @@
             margin-bottom: 0;
         }
         p {
+            margin-top: 11px;
             margin-left: 5px;
             margin-bottom: 0;
             &:hover {
