--- a/src/components/EditProduct/styles.module.scss
+++ b/src/components/EditProduct/styles.module.scss
@@ -4,6 +4,7 @@
     align-items: center;
     flex-direction: column;
     margin: 15px;
+    margin-top: 105px;
     height: 619px;
   }
   .loadingWindow {
