--- a/src/pages/Favorite/styles.module.scss
+++ b/src/pages/Favorite/styles.module.scss
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     margin: 15px;
+    margin-top: 105px;
     align-items: center;
     height: 619px;
     // margin-top: 27px;
