--- a/src/pages/Home/styles.module.scss
+++ b/src/pages/Home/styles.module.scss
@@ -4,6 +4,7 @@
     // padding: px;
     // padding-top: 11px;
     justify-content: center;
+    margin-top: 85px;
     .items{
       display: grid;
       grid-template-columns: repeat(5, 1fr);
